--- a/studySpot/clapp.html
+++ b/studySpot/clapp.html
@@ -52,13 +52,13 @@ $("#addFav").click(function(){
 
             <div id = "resPage" role="content" class="ui-content">  <!-- Start of content -->
             	<div id="imgContainer">
-            	<img src="lulu.jpg" >
+            	<img src="clappImg.jpg" >
             </div>
 
           
 <div id="titleCont">
-            <h2 class="title"> Anderson Forum</h2>
-            <h3 class="title"> Lulu Chow Wang Campus Center</h3>
+            <h2 class="title"> Clapp</h2>
+            <h3 class="title"> Room #123, 1st floor</h3>
         </div>
 
 <div id="addFav">
@@ -70,17 +70,15 @@ $("#addFav").click(function(){
 
 			<div id="col1">
 					<ul class="title">
-						<li> <h3 class="title">Dim lighting</h3></li>
-						<li> <h3 class="title">Comfortable couches</h3></li>
-						<li> <h3 class="title">Large lounge chairs</h3> </li>
+						<li> <h3 class="title">Electric lighting</h3></li>
+						<li> <h3 class="title">Big table</h3></li>
+						<li> <h3 class="title">Whiteboard</h3> </li>
 						
 					</ul>
 					</div>
 					<div id="col2">
-						<ul class="title">
-						<li> <h3 class="title">Small tables </h3></li>
-						<li> <h3 class="title">Close to cafeteria</h3></li>
-						<li> <h3 class="title">Close to Emporium cafe</h3></li>
+						<ul class="title">Printer</h3></li>
+						<li> <h3 class="title">Pretty view</h3></li>
 					</ul>
 				</div>
 
@@ -88,11 +86,10 @@ $("#addFav").click(function(){
 
 
            </div> <!-- End of content -->
-            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+           <div id="navigateB">
 					<img id="thumbs" src="thumbsUp-01.png">
 					<h2 class="title">Navigate</h2>
 				</div>
-			</a>
 
                 </div> <!-- End of first page -->
 
