--- a/studySpot/sciCenter.html
+++ b/studySpot/sciCenter.html
@@ -52,13 +52,13 @@ $("#addFav").click(function(){
 
             <div id = "resPage" role="content" class="ui-content">  <!-- Start of content -->
             	<div id="imgContainer">
-            	<img src="lulu.jpg" >
+            	<img src="leaky.jpg" >
             </div>
 
           
 <div id="titleCont">
-            <h2 class="title"> Anderson Forum</h2>
-            <h3 class="title"> Lulu Chow Wang Campus Center</h3>
+            <h2 class="title"> Science Center</h2>
+            <h3 class="title"> Leaky Beaker</h3>
         </div>
 
 <div id="addFav">
@@ -70,9 +70,9 @@ $("#addFav").click(function(){
 
 			<div id="col1">
 					<ul class="title">
-						<li> <h3 class="title">Dim lighting</h3></li>
+						<li> <h3 class="title">Electric lighting</h3></li>
 						<li> <h3 class="title">Comfortable couches</h3></li>
-						<li> <h3 class="title">Large lounge chairs</h3> </li>
+						<li> <h3 class="title">Large couches</h3> </li>
 						
 					</ul>
 					</div>
@@ -80,7 +80,6 @@ $("#addFav").click(function(){
 						<ul class="title">
 						<li> <h3 class="title">Small tables </h3></li>
 						<li> <h3 class="title">Close to cafeteria</h3></li>
-						<li> <h3 class="title">Close to Emporium cafe</h3></li>
 					</ul>
 				</div>
 
@@ -88,11 +87,10 @@ $("#addFav").click(function(){
 
 
            </div> <!-- End of content -->
-            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+           <div id="navigateB">
 					<img id="thumbs" src="thumbsUp-01.png">
 					<h2 class="title">Navigate</h2>
 				</div>
-			</a>
 
                 </div> <!-- End of first page -->
 
