--- a/studySpot/map3.html
+++ b/studySpot/map3.html
@@ -132,7 +132,7 @@
 
                  <div id="results" style="display:none;">
                     <div id="navigateTo">
-                        <h4 class="title">Sanger Reading Room/h4>
+                        <h2 class="title">Sanger Reading Room</h2>
                         <h3 class="title">Clapp Library</h3>
                         
                     </div>
