--- a/studySpot/map3.html
+++ b/studySpot/map3.html
@@ -14,6 +14,8 @@
 
         <!--ADDED-->
         <link rel="stylesheet" type="text/css" href="myStyle.css" />
+        <link rel="stylesheet" type="text/css" href="mapStyle.css" />
+
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
