--- a/studySpot/map3.html
+++ b/studySpot/map3.html
@@ -129,7 +129,7 @@
 
             <div data-role="content">   
                 <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
-                    <div id="map_canvas" style="width:400px;height:240px;"></div>
+                    <div id="map_canvas"></div>
                 <!--</div>  -->
 
                  <div id="results" style="display:none;">
