--- a/studySpot/map3.html
+++ b/studySpot/map3.html
@@ -131,15 +131,17 @@
                 <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
                     <div id="map_canvas"></div>
                 <!--</div>  -->
-
-                 <div id="results" style="display:none;">
-                    <div id="navigateTo">
+  <div id="navigateTo">
                         <h2 class="title">Sanger Reading Room</h2>
                         <h3 class="title">Clapp Library</h3>
                         
                     </div>
+                    <div id="pathDir">
+                 <div id="results" style="display:none;">
+                  
                     <div id="directions"></div>
                 </div> <!--results-->
+            </div>
             </div> <!--content-->
         </div> <!--page-->  
 
