--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -128,9 +128,9 @@ $("#addFav2").click(function(){
                         <img id = "heartIcon" src = "heartIconD.png">
                     </div>
 
-                    <div id="backArrowDiv">
+                    <a href="results.html" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
                         <img id = "arrowIcon" src = "arrowBack.png">
-                    </div>
+                    </div></a>
             </div>
             <!-- END OF STUDYSPOT HEADER -->
 
