--- a/studySpot/results3.html
+++ b/studySpot/results3.html
@@ -48,7 +48,7 @@
                     <img class = "placePhoto"src = "anderson.jpg">
                 </div></a>
 
-                <div class = "resultsText">
+                 <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
                     <h2>Lulu<h2>
                       <h3 class="subT">Anderson Forum, 2nd floor</h3>
                         <ul>
@@ -57,22 +57,22 @@
                             <li><h3>Tables</h3></li>
 
                         </ul>
-                    </div>
+                    </div></a>
 
-                    <div class = "arrowRight">
+                     <a href="results.html" data-rel="page" data-transition="slide" ><div class = "arrowRight">
                         <img class = "arrowRightImg" src="arrowRightIcon.png">
 
-                    </div>
+                    </div></a>
                </div>
 
 
                  <div class = container>
-                    <div class = "resultsImage">
+                     <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
                     <img class = "placePhoto"src = "scicenter.jpg">
-                </div>
+                </div></a>
 
-                <div class = "resultsText">
-                    <h2>Science center<h2>
+                <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
+                    <h2>Science Center<h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -80,12 +80,12 @@
                             <li><h3>Whiteboard</h3></li>
 
                         </ul>
-                    </div>
+                    </div></a>
 
-                    <div class = "arrowRight">
+                    <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "arrowRight">
                         <img class = "arrowRightImg" src="arrowRightIcon.png">
 
-                    </div>
+                    </div></a>
 
 
 
@@ -93,11 +93,11 @@
                 </div>
 
                  <div class = "container">
-                    <div class = "resultsImage">
+                    <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
                     <img class = "placePhoto"src = "clapp.jpg">
-                </div>
+                </div></a>
 
-                <div class = "resultsText">
+                <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
                     <h2>Clapp<h2>
                       <h3 class="subT">Room #123, 1st floor</h3>
                         <ul>
@@ -106,12 +106,12 @@
                             <li><h3>Table</h3></li>
 
                         </ul>
-                    </div>
+                    </div></a>
 
-                    <div class = "arrowRight">
+                    <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "arrowRight">
                         <img class = "arrowRightImg" src="arrowRightIcon.png">
 
-                    </div>
+                    </div></a>
                 </div>
 
 
@@ -119,5 +119,8 @@
            
 
                 </div> <!-- End of first page -->
+
+
+
 </body>
 </html>
