--- a/studySpot/sciCenter.html
+++ b/studySpot/sciCenter.html
@@ -87,10 +87,11 @@ $("#addFav").click(function(){
 
 
            </div> <!-- End of content -->
-           <div id="navigateB">
+            <a href="map2.html" data-rel="page" data-transition="slide" ><div id="navigateB">
 					<img id="thumbs" src="thumbsUp-01.png">
 					<h2 class="title">Navigate</h2>
 				</div>
+			</a>
 
                 </div> <!-- End of first page -->
 
