--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -284,7 +284,7 @@
                 </div></a>
 
                 <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Science Center<h2>
+                    <h2>Science</br> Center<h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
