--- a/studySpot/results3.html
+++ b/studySpot/results3.html
@@ -28,7 +28,7 @@
                 <img id = "heartIcon" src = "heartIconD.png">
               </div>
 
-              <a href="#home" data-transition="slide"><div id="backArrowDiv">
+              <a href="index1.html" data-transition="slide"><div id="backArrowDiv">
                 <img id = "arrowIcon" src = "arrowBack.png">
               </div></a>
 
@@ -72,7 +72,7 @@
                 </div></a>
 
                 <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Science Center<h2>
+                    <h2>Science </br>Center<h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
