--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -125,9 +125,10 @@
 
              <div id="header">
                 <h1 id ="appTitle"class = "title">StudySpot</h1>
-              <div id="heartDiv">
+              <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
               </div>
+            </a>
 
             </div>
 
@@ -236,9 +237,9 @@
 
              <div id="header">
                 <h1 class = "title">StudySpot</h1>
-              <div id="heartDiv">
+               <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
-              </div>
+              </div></a>
 
               <a href="#home" data-transition="slide"><div id="backArrowDiv">
                 <img id = "arrowIcon" src = "arrowBack.png">
@@ -341,9 +342,9 @@
 
              <div id="header">
                 <h1 class = "title">StudySpot</h1>
-              <div id="heartDiv">
+               <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
-              </div>
+              </div></a>
 
               <a href="#home" data-transition="slide"><div id="backArrowDiv">
                 <img id = "arrowIcon" src = "arrowBack.png">
@@ -443,9 +444,9 @@
 
         <div id="header">
                 <h1 class = "title">StudySpot</h1>
-              <div id="heartDiv">
+               <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
-              </div>
+              </div></a>
 
               <a href="#resultsPage" data-transition="slide"><div id="backArrowDiv">
                 <img id = "arrowIcon" src = "arrowBack.png">
