--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -124,7 +124,7 @@
         <div data-role="page" id="home" data-theme="a">
 
              <div id="header">
-                <h1 id ="appTitle"class = "title">StudySpot</h1>
+                <h1 id ="appTitle" class = "title">StudySpot</h1>
               <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
               </div>
@@ -133,7 +133,7 @@
             </div>
 
 
-            <div id = "homePage" role="content" class="ui-content">  <!-- Start of content -->
+            <div id ="homePage" role="content" class="ui-content">  <!-- Start of content -->
 
 
             <h2 id="spacePreftitle" class = "title">Space preference?</h2>
@@ -258,11 +258,11 @@
                 
                 <div class = container>
                     <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "anderson.jpg">
+                    <img class = "placePhoto" src = "anderson.jpg">
                 </div></a>
 
                  <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Lulu<h2>
+                    <h2>Lulu</h2>
                       <h3 class="subT">Anderson Forum, 2nd floor</h3>
                         <ul>
                             <li><h3>Dim lighting</h3></li>
@@ -281,11 +281,11 @@
 
                  <div class = container>
                      <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "scicenter.jpg">
+                    <img class = "placePhoto" src = "scicenter.jpg">
                 </div></a>
 
                 <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Science</br> Center<h2>
+                    <h2>Science<br> Center</h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -307,11 +307,11 @@
 
                  <div class = "container">
                     <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "clapp.jpg">
+                    <img class = "placePhoto" src = "clapp.jpg">
                 </div></a>
 
                 <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Clapp<h2>
+                    <h2>Clapp</h2>
                       <h3 class="subT">Room #123, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -358,11 +358,11 @@
                 
                 <div class = container>
                     <div class = "resultsImage">
-                    <img class = "placePhoto"src = "anderson.jpg">
+                    <img class = "placePhoto" src = "anderson.jpg">
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Lulu<h2>
+                    <h2>Lulu</h2>
                       <h3 class="subT">Anderson Forum, 2nd floor</h3>
                         <ul>
                             <li><h3>Dim lighting</h3></li>
@@ -381,11 +381,11 @@
 
                  <div class = container>
                     <div class = "resultsImage">
-                    <img class = "placePhoto"src = "scicenter.jpg">
+                    <img class = "placePhoto" src = "scicenter.jpg">
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Science center<h2>
+                    <h2>Science center</h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -407,11 +407,11 @@
 
                  <div class = "container">
                     <div class = "resultsImage">
-                    <img class = "placePhoto"src = "clapp.jpg">
+                    <img class = "placePhoto" src = "clapp.jpg">
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Clapp<h2>
+                    <h2>Clapp</h2>
                       <h3 class="subT">Room #123, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
