--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -631,7 +631,7 @@
 
 
             </div>
-    
+    </div>
     
  <a href="#resultsPage" data-transition="slide"><div id="saveFilters">
     <h2>Save filters</h2>
