--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -636,13 +636,11 @@
 <a href="#resultsPage" data-transition="slide"><div id="saveFilters">
   <h2>Save filters</h2>
 </div></a>
+</div> 
 </div> <!-- End of content -->
 
 
-</div> <!-- End of first page -->
-
-
-</div>
+</div><!-- End of page-->
 
 
 
