--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -115,6 +115,15 @@
   });
 </script>
 
+ <script type="text/javascript">
+    $( document ).ready( function(){
+
+$("#addFav").click(function(){
+    alert("Tha spot was added to your favorites");
+});
+});
+</script>
+
 
 </head>
 
@@ -261,7 +270,7 @@
       <img class = "placePhoto" src = "anderson.jpg">
     </div></a>
 
-    <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
+    <a href="resultsAnd" data-rel="page" data-transition="slide" ><div class = "resultsText">
       <h2>Lulu</h2>
       <h3 class="subT">Anderson Forum, 2nd floor</h3>
       <ul>
@@ -665,6 +674,69 @@
     "register_form">Save</a>
   </div>
 </div>
+
+
+<div data-role="page" id="resultsAnd" data-theme="a">
+
+             <div id="header">
+                <h1 id ="appTitle" class = "title">StudySpot</h1>
+              <div id="heartDiv">
+                <img id = "heartIcon" src = "heartIconD.png">
+              </div>
+
+               <a href="results3.html" data-transition="slide"><div id="backArrowDiv">
+                <img id = "arrowIcon" src = "arrowBack.png">
+              </div></a>
+
+            </div>
+
+
+            <div id = "resPage" role="content" class="ui-content">  <!-- Start of content -->
+              <div id="imgContainer">
+              <img src="lulu.jpg" >
+            </div>
+
+          
+<div id="titleCont">
+            <h2 class="title"> Anderson Forum</h2>
+            <h3 class="title"> Lulu Chow Wang Campus Center</h3>
+        </div>
+
+<div id="addFav">
+  <img id="heartIcon" src="heartIconD.png">
+
+<h3 class="title">Add to favorites</h3>
+</div>
+<div id="amen">
+
+      <div id="col1">
+          <ul class="title">
+            <li> <h3 class="title">Dim lighting</h3></li>
+            <li> <h3 class="title">Comfortable couches</h3></li>
+            <li> <h3 class="title">Large lounge chairs</h3> </li>
+            
+          </ul>
+          </div>
+          <div id="col2">
+            <ul class="title">
+            <li> <h3 class="title">Small tables </h3></li>
+            <li> <h3 class="title">Close to cafeteria</h3></li>
+            <li> <h3 class="title">Close to Emporium cafe</h3></li>
+          </ul>
+        </div>
+
+        </div>
+
+
+           </div> <!-- End of content -->
+            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+          <img id="thumbs" src="thumbsUp-01.png">
+          <h2 class="title">Navigate</h2>
+        </div>
+      </a>
+
+                </div> <!-- End of first page -->
+
 
 
 
