--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -652,8 +652,6 @@ $("#addFav").click(function(){
 </div><!-- End of page-->
 
 
-
-
 <div data-role ="popup" id="popupMenu" data-theme="a">
   <form>
     <label>
@@ -678,8 +676,6 @@ $("#addFav").click(function(){
 
 
 
-
-
-
+</div>
 </body>
 </html>
