--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -652,6 +652,25 @@ $("#addFav").click(function(){
 </div><!-- End of page-->
 
 
+<div data-role ="popup" id="popupMenu" data-theme="a">
+  <form>
+    <label>
+      <input type="checkbox" name="checkbox-0 ">Adobe Photoshop
+    </label>
+    <label>
+      <input type="checkbox" name="checkbox-0 ">Adobe Illustrator
+    </label>
+    <label>
+      <input type="checkbox" name="checkbox-0 ">Adobe InDesign
+    </label>
+    <label>
+      <input type="checkbox" name="checkbox-0 ">Adobe AfterEffects
+    </label>
+  </form>
+  <div class="saveBtn">
+    <a class="btn" href="#filters" id="register_form" name="register_form">Save</a>
+  </div>
+</div>
 
 
 
