--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -506,19 +506,21 @@ $("#addFav").click(function(){
   </h3>
 
 </div>
+
 <div class="optionGroup">
  <span class="icon-iconFilters-05"></span>
  <h3 class = "title">
   3
 </h3>
 </div>
+
 <div class="optionGroup">
   <span class="icon-iconFilters-06"></span>
   <h3 class = "title">
     3+
   </h3>
 </div>
-</div>
+</div> <!-- end of groupWOrk-->
 
 <h2 id="proxTitle" class ="title">Study spot proximity</h2>
 
@@ -538,7 +540,7 @@ $("#addFav").click(function(){
   </h3>
 </div>
 
-</div>
+</div> <!-- End of proximity div-->
 
 
 <h2 id="eatTitle" class = "title">Will you need food?</h2>
@@ -557,13 +559,14 @@ $("#addFav").click(function(){
     Could eat
   </h3>
 </div>
+
 <div class="optionEat">
  <span class="icon-iconFilters-27"></span>
  <h3 class = "title">
   Full
 </h3>
 </div>
-</div>
+</div> <!-- End of optionEat-->
 
 <h2 id="popularTitle" class = "title">Popularity</h2>
 <div id = "popOptions">
@@ -575,6 +578,7 @@ $("#addFav").click(function(){
       Yes
     </label>
   </div>
+  
   <div class="radioCont">
     <input id="radio2" name="radios" type="radio"/>
 
@@ -582,7 +586,7 @@ $("#addFav").click(function(){
       No
     </label>
   </div>
-
+</div> <!-- End of popOptions-->
 
 
   <h2 id="resourceTitle" class = "title">Resources</h2>
@@ -637,15 +641,12 @@ $("#addFav").click(function(){
 </div>
 </a>
 
-
-
-
-
+</div> <!-- End of resources-->
 
 <a href="#resultsPage" data-transition="slide"><div id="saveFilters">
   <h2>Save filters</h2>
 </div></a>
-</div> 
+
 </div> <!-- End of content -->
 
 
@@ -670,8 +671,8 @@ $("#addFav").click(function(){
   <div class="saveBtn">
     <a class="btn" href="#filters" id="register_form" name="register_form">Save</a>
   </div>
-</div>
 
+</div>
 
 </body>
 </html>
