--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -654,20 +654,11 @@ $("#addFav").click(function(){
 
 
 <div data-role ="popup" id="popupMenu" data-theme="a">
-  <form>
+  <<form>
     <label>
-      <input type="checkbox" name="checkbox-0 ">Adobe Photoshop
+        <input type="checkbox" name="checkbox-0 ">Check me
     </label>
-    <label>
-      <input type="checkbox" name="checkbox-0 ">Adobe Illustrator
-    </label>
-    <label>
-      <input type="checkbox" name="checkbox-0 ">Adobe InDesign
-    </label>
-    <label>
-      <input type="checkbox" name="checkbox-0 ">Adobe AfterEffects
-    </label>
-  </form>
+</form>
   <div class="saveBtn">
     <a class="btn" href="#filters" id="register_form" name="register_form">Save</a>
   </div>
