--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -109,7 +109,7 @@
         <div data-role="page" id="home" data-theme="a">
 
              <div id="header">
-                <h1 id ="appTitle"class = "title">StudySpot</h1>
+                <h1 id ="appTitle" class = "title">StudySpot</h1>
               <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
               </div>
@@ -243,7 +243,7 @@
                 
                 <div class = container>
                     <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "anderson.jpg">
+                    <img class = "placePhoto" src = "anderson.jpg">
                 </div></a>
 
                  <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
@@ -266,11 +266,11 @@
 
                  <div class = container>
                      <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "scicenter.jpg">
+                    <img class = "placePhoto" src = "scicenter.jpg">
                 </div></a>
 
                 <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Science</br> Center<h2>
+                    <h2>Science<br> Center</h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -292,11 +292,11 @@
 
                  <div class = "container">
                     <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "clapp.jpg">
+                    <img class = "placePhoto" src = "clapp.jpg">
                 </div></a>
 
                 <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Clapp<h2>
+                    <h2>Clapp</h2>
                       <h3 class="subT">Room #123, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -343,11 +343,11 @@
                 
                 <div class = container>
                     <div class = "resultsImage">
-                    <img class = "placePhoto"src = "anderson.jpg">
+                    <img class = "placePhoto" src = "anderson.jpg">
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Lulu<h2>
+                    <h2>Lulu</h2>
                       <h3 class="subT">Anderson Forum, 2nd floor</h3>
                         <ul>
                             <li><h3>Dim lighting</h3></li>
