--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -247,7 +247,7 @@
                 </div></a>
 
                  <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
-                    <h2>Lulu<h2>
+                    <h2>Lulu</h2>
                       <h3 class="subT">Anderson Forum, 2nd floor</h3>
                         <ul>
                             <li><h3>Dim lighting</h3></li>
@@ -366,11 +366,11 @@
 
                  <div class = container>
                     <div class = "resultsImage">
-                    <img class = "placePhoto"src = "scicenter.jpg">
+                    <img class = "placePhoto" src = "scicenter.jpg">
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Science center<h2>
+                    <h2>Science <br>Center</h2>
                       <h3 class="subT">Leaky beaker, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
@@ -392,11 +392,11 @@
 
                  <div class = "container">
                     <div class = "resultsImage">
-                    <img class = "placePhoto"src = "clapp.jpg">
+                    <img class = "placePhoto" src = "clapp.jpg">
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Clapp<h2>
+                    <h2>Clapp</h2>
                       <h3 class="subT">Room #123, 1st floor</h3>
                         <ul>
                             <li><h3>Electric light</h3></li>
