--- a/studySpot/map2.html
+++ b/studySpot/map2.html
@@ -124,9 +124,9 @@ $("#addFav2").click(function(){
             <!-- STUDYSPOT HEADER -->
             <div id="header">
                 <h1 class = "title">StudySpot</h1>
-                    <div id="heartDiv">
+                      <a href="favPage.html" data-transition="slide"><div id="heartDiv">
                         <img id = "heartIcon" src = "heartIconD.png">
-                    </div>
+                    </div></a>
 
                     <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
                         <img id = "arrowIcon" src = "arrowBack.png">
