--- a/studySpot/results.html
+++ b/studySpot/results.html
@@ -39,9 +39,9 @@ $("#addFav").click(function(){
 
              <div id="header">
                 <h1 id ="appTitle" class = "title">StudySpot</h1>
-              <div id="heartDiv">
+              <a href="favPage.html" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
-              </div>
+              </div></a>
 
                <a href="results3.html" data-transition="slide"><div id="backArrowDiv">
                 <img id = "arrowIcon" src = "arrowBack.png">
