--- a/studySpot/results3.html
+++ b/studySpot/results3.html
@@ -24,11 +24,11 @@
 
              <div id="header">
                 <h1 class = "title">StudySpot</h1>
-              <div id="heartDiv">
+              <a href="favPage.html" data-transition="slide"><div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
-              </div>
+              </div></a>
 
-              <a href="index1.html" data-transition="slide"><div id="backArrowDiv">
+              <a href="index2.html" data-transition="slide"><div id="backArrowDiv">
                 <img id = "arrowIcon" src = "arrowBack.png">
               </div></a>
 
