--- a/studySpot/results3.html
+++ b/studySpot/results3.html
@@ -93,11 +93,11 @@
                 </div>
 
                  <div class = "container">
-                    <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
-                    <img class = "placePhoto"src = "clapp.jpg">
+                    <a href="clapp.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
+                    <img class = "placePhoto" src = "clapp.jpg">
                 </div></a>
 
-                <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
+                <a href="clapp.html" data-rel="page" data-transition="slide" ><div class = "resultsText">
                     <h2>Clapp<h2>
                       <h3 class="subT">Room #123, 1st floor</h3>
                         <ul>
@@ -108,7 +108,7 @@
                         </ul>
                     </div></a>
 
-                    <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div class = "arrowRight">
+                    <a href="clapp.html" data-rel="page" data-transition="slide" ><div class = "arrowRight">
                         <img class = "arrowRightImg" src="arrowRightIcon.png">
 
                     </div></a>
