--- a/studySpot/clapp.html
+++ b/studySpot/clapp.html
@@ -77,7 +77,8 @@ $("#addFav").click(function(){
 					</ul>
 					</div>
 					<div id="col2">
-						<ul class="title">Printer</h3></li>
+						<ul class="title">
+							<li><h3>Printer</h3></li>
 						<li> <h3 class="title">Pretty view</h3></li>
 					</ul>
 				</div>
@@ -86,10 +87,11 @@ $("#addFav").click(function(){
 
 
            </div> <!-- End of content -->
-           <div id="navigateB">
+            <a href="map3.html" data-transition="slide"><div id="navigateB">
 					<img id="thumbs" src="thumbsUp-01.png">
 					<h2 class="title">Navigate</h2>
 				</div>
+			</a>
 
                 </div> <!-- End of first page -->
 
