--- a/studySpot/results.html
+++ b/studySpot/results.html
@@ -6,105 +6,114 @@ DATE:  April 21, 2015
 PURPOSE: For CS220, P4
 -->
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>StudySpot</title>
-	<link rel="stylesheet" href="themes/wells.min.css" />
-	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
-
-	<link rel="stylesheet" type="text/css" href="myStyle.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
-
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-</head>
-
-
-<body>
-
-   <script type="text/javascript">
-    $( document ).ready( function(){
-
-$("#addFav").click(function(){
-    alert("Tha spot was added to your favorites");
-});
-});
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>
+			StudySpot
+		</title>
+		<link rel="stylesheet" href="themes/wells.min.css" type="text/css">
+		<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" type="text/css">
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" type="text/css">
+		<link rel="stylesheet" type="text/css" href="myStyle.css">
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript">
 </script>
+		<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js" type="text/javascript">
+</script>
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
+		<script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript">
+</script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" type="text/javascript">
+</script>
+	</head>
+	<body>
+		<script type="text/javascript">
+$( document ).ready( function(){
 
-	        <div data-role="page" id="resultsAnd" data-theme="a">
-
-             <div id="header">
-                <h1 id ="appTitle" class = "title">StudySpot</h1>
-              <a href="favPage.html" data-transition="slide"><div id="heartDiv">
-                <img id = "heartIcon" src = "heartIconD.png">
-              </div></a>
-
-               <a href="results3.html" data-transition="slide"><div id="backArrowDiv">
-                <img id = "arrowIcon" src = "arrowBack.png">
-              </div></a>
-
-            </div>
-
-
-            <div id = "resPage" role="content" class="ui-content">  <!-- Start of content -->
-            	<div id="imgContainer">
-            	<img src="lulu.jpg" >
-            </div>
-
-          
-<div id="titleCont">
-            <h2 class="title"> Anderson Forum</h2>
-            <h3 class="title"> Lulu Chow Wang Campus Center</h3>
-        </div>
-
-<div id="addFav">
-	<img id="heartIcon" src="heartIconD.png">
-
-<h3 class="title">Add to favorites</h3>
-</div>
-<div id="amen">
-
-			<div id="col1">
-					<ul class="title">
-						<li> <h3 class="title">Dim lighting</h3></li>
-						<li> <h3 class="title">Comfortable couches</h3></li>
-						<li> <h3 class="title">Large lounge chairs</h3> </li>
-						
-					</ul>
+		$("#addFav").click(function(){
+		alert("Tha spot was added to your favorites");
+		});
+		});
+		</script>
+		<div data-role="page" id="resultsAnd" data-theme="a">
+			<div id="header">
+				<h1 id="appTitle" class="title">
+					StudySpot
+				</h1><a href="favPage.html" data-transition="slide"></a>
+				<div id="heartDiv">
+					<img id="heartIcon" src="heartIconD.png">
+				</div><a href="results3.html" data-transition="slide"></a>
+				<div id="backArrowDiv">
+					<img id="arrowIcon" src="arrowBack.png">
+				</div>
+			</div>
+			<div id="resPage" role="content" class="ui-content">
+				<!-- Start of content -->
+				<div id="imgContainer">
+					<img src="lulu.jpg">
+				</div>
+				<div id="titleCont">
+					<h2 class="title">
+						Anderson Forum
+					</h2>
+					<h3 class="title">
+						Lulu Chow Wang Campus Center
+					</h3>
+				</div>
+				<div id="addFav">
+					<img id="heartIcon2" src="heartIconD.png">
+					<h3 class="title">
+						Add to favorites
+					</h3>
+				</div>
+				<div id="amen">
+					<div id="col1">
+						<ul class="title">
+							<li>
+								<h3 class="title">
+									Dim lighting
+								</h3>
+							</li>
+							<li>
+								<h3 class="title">
+									Comfortable couches
+								</h3>
+							</li>
+							<li>
+								<h3 class="title">
+									Large lounge chairs
+								</h3>
+							</li>
+						</ul>
 					</div>
 					<div id="col2">
 						<ul class="title">
-						<li> <h3 class="title">Small tables </h3></li>
-						<li> <h3 class="title">Close to cafeteria</h3></li>
-						<li> <h3 class="title">Close to Emporium cafe</h3></li>
-					</ul>
+							<li>
+								<h3 class="title">
+									Small tables
+								</h3>
+							</li>
+							<li>
+								<h3 class="title">
+									Close to cafeteria
+								</h3>
+							</li>
+							<li>
+								<h3 class="title">
+									Close to Emporium cafe
+								</h3>
+							</li>
+						</ul>
+					</div>
 				</div>
-
-				</div>
-
-
-           </div> <!-- End of content -->
-            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
-					<img id="thumbs" src="thumbsUp-01.png">
-					<h2 class="title">Navigate</h2>
-				</div>
-			</a>
-
-                </div> <!-- End of first page -->
-
-
-
-
-
-
-
-
-
-
-		
-		</body>
-		</html>
+			</div><!-- End of content -->
+			<a href="map.html" data-rel="page" data-transition="slide"></a>
+			<div id="navigateB">
+				<img id="thumbs" src="thumbsUp-01.png">
+				<h2 class="title">
+					Navigate
+				</h2>
+			</div>
+		</div><!-- End of first page -->
+	</body>
+</html>
