--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -929,11 +929,10 @@ $("#addFav2").click(function(){
                 </div> <!-- End of first page -->
 
 
-
- <div data-role="page" id="andersonMap" data-theme="a">
+                 <div data-role="page" id="sciMap" data-theme="a">
             <script type="text/javascript">
-                destinationLatitude = 42.294514, 
-                destinationLongitude = -71.308954;
+                destinationLatitude = 42.293526, 
+                destinationLongitude = -71.303139;
             </script>    
 
             <!-- STUDYSPOT HEADER -->
@@ -943,7 +942,7 @@ $("#addFav2").click(function(){
                         <img id = "heartIcon" src = "heartIconD.png">
                     </div></a>
 
-                    <a href="results.html" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
+                    <a href="sciCenter.html" data-rel="page" data-transition="slide" ><div id="backArrowDiv">
                         <img id = "arrowIcon" src = "arrowBack.png">
                     </div></a>
             </div>
@@ -954,8 +953,8 @@ $("#addFav2").click(function(){
                     <div id="map_canvas"></div>
                 <!--</div>-->   <div id="titleCont2">
 
-            <h2 class="title"> Anderson Forum</h2>
-            <h3 class="title"> Lulu Chow Wang Campus Center</h3>
+            <h2 class="title"> Science Center</h2>
+            <h3 class="title"> Leaky Beaker, 1st floor</h3>
         </div>
 
 <div id="pathDir">
