--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -929,7 +929,7 @@ $("#addFav2").click(function(){
                 </div> <!-- End of first page -->
 
 
-                 <div data-role="page" id="sciMap" data-theme="a">
+                 <div data-role="page" id="anderson" data-theme="a">
             <script type="text/javascript">
                 destinationLatitude = 42.293526, 
                 destinationLongitude = -71.303139;
