--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -5,7 +5,7 @@
   <title>StudySpot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="myTheme.css" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
   <link rel="stylesheet" href="myTheme.min.css" />
