--- a/studySpot/map2.html
+++ b/studySpot/map2.html
@@ -3,7 +3,7 @@
    <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Map Page</title>
+        <title>StudySpot</title>
         <!--REMOVED FROM ORIGINAL<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />-->
 
         <!--ADDED-->
