--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -5,7 +5,7 @@
   <title>StudySpot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="myTheme.css" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
   <link rel="stylesheet" href="myTheme.min.css" />
@@ -13,8 +13,91 @@
   <link rel="stylesheet" type="text/css" href="mapStyle.css" />
   <link rel="stylesheet" type="text/css" href="myStyle.css" />
    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+           <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
+
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3&sensor=false&language=en"></script>
+        <script type="text/javascript">
+
+            var map,
+                currentPosition,
+                directionsDisplay, 
+                directionsService,
+                destinationLatitude,
+                destinationLongitude 
+
+            function initializeMapAndCalculateRoute(lat, lon)
+            {
+                console.log('init map');
+                directionsDisplay = new google.maps.DirectionsRenderer(); 
+                directionsService = new google.maps.DirectionsService();
+
+                currentPosition = new google.maps.LatLng(lat, lon);
+
+                map = new google.maps.Map(document.getElementById('map_canvas'), {
+                   zoom: 15,
+                   center: currentPosition,
+                   mapTypeId: google.maps.MapTypeId.ROADMAP
+                 });
+
+                directionsDisplay.setMap(map);
+
+                 var currentPositionMarker = new google.maps.Marker({
+                    position: currentPosition,
+                    map: map,
+                    title: "Current position"
+                });
+
+                // calculate Route
+                calculateRoute();
+            }
+
+            function locError(error) {
+               // the current position could not be located
+            }
+
+            function locSuccess(position) {
+                // initialize map with current position and calculate the route
+                initializeMapAndCalculateRoute(position.coords.latitude, position.coords.longitude);
+            }
+
+            function calculateRoute() {
+
+                var targetDestination =  new google.maps.LatLng(destinationLatitude, destinationLongitude);
+                if (currentPosition != '' && targetDestination != '') {
+
+                    var request = {
+                        origin: currentPosition, 
+                        destination: targetDestination,
+                        travelMode: google.maps.DirectionsTravelMode["WALKING"]
+                    };
+
+                    directionsService.route(request, function(response, status) {
+                        if (status == google.maps.DirectionsStatus.OK) {
+                            directionsDisplay.setPanel(document.getElementById("directions"));
+                            directionsDisplay.setDirections(response); 
+
+                            $("#results").show();
+                        }
+                        else {
+                            $("#results").hide();
+                        }
+                    });
+                }
+                else {
+                    $("#results").hide();
+                }
+            }
+
+            $(document).live("pagebeforeshow", "#map_page", function() {
+                // find current position and on success initialize map and calculate the route
+                navigator.geolocation.getCurrentPosition(locSuccess, locError);
+            });
+
+        </script>
+
 
   <script type="text/javascript">
   $( document ).ready( function(){
@@ -115,95 +198,6 @@
 
 });
 </script>
-
- <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3&sensor=false&language=en"></script>
-        <script type="text/javascript">
-
-            var map,
-                currentPosition,
-                directionsDisplay, 
-                directionsService,
-                destinationLatitude,
-                destinationLongitude 
-
-            function initializeMapAndCalculateRoute(lat, lon)
-            {
-                directionsDisplay = new google.maps.DirectionsRenderer(); 
-                directionsService = new google.maps.DirectionsService();
-
-                currentPosition = new google.maps.LatLng(lat, lon);
-
-                map = new google.maps.Map(document.getElementById('map_canvas'), {
-                   zoom: 15,
-                   center: currentPosition,
-                   mapTypeId: google.maps.MapTypeId.ROADMAP
-                 });
-
-                directionsDisplay.setMap(map);
-
-                 var currentPositionMarker = new google.maps.Marker({
-                    position: currentPosition,
-                    map: map,
-                    title: "Current position"
-                });
-
-                // calculate Route
-                calculateRoute();
-            }
-
-            function locError(error) {
-               // the current position could not be located
-            }
-
-            function locSuccess(position) {
-                // initialize map with current position and calculate the route
-                initializeMapAndCalculateRoute(position.coords.latitude, position.coords.longitude);
-            }
-
-            function calculateRoute() {
-
-                var targetDestination =  new google.maps.LatLng(destinationLatitude, destinationLongitude);
-                if (currentPosition != '' && targetDestination != '') {
-
-                    var request = {
-                        origin: currentPosition, 
-                        destination: targetDestination,
-                        travelMode: google.maps.DirectionsTravelMode["WALKING"]
-                    };
-
-                    directionsService.route(request, function(response, status) {
-                        if (status == google.maps.DirectionsStatus.OK) {
-                            directionsDisplay.setPanel(document.getElementById("directions"));
-                            directionsDisplay.setDirections(response); 
-
-                            $("#results").show();
-                        }
-                        else {
-                            $("#results").hide();
-                        }
-                    });
-                }
-                else {
-                    $("#results").hide();
-                }
-            }
-
-            $(document).live("pagebeforeshow", "#map_page", function() {
-                // find current position and on success initialize map and calculate the route
-                navigator.geolocation.getCurrentPosition(locSuccess, locError);
-            });
-
-        </script>
-
-          <script type="text/javascript">
-    $( document ).ready( function(){
-
-$("#addFav2").click(function(){
-    alert("Tha spot was added to your favorites");
-});
-});
-</script>
-
     </head>
 
 
@@ -795,7 +789,7 @@ $("#addFav2").click(function(){
 
 
            </div> <!-- End of content -->
-            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+            <a href="#maplulu" data-rel="page" data-transition="slide" ><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -927,8 +921,32 @@ $("#addFav2").click(function(){
 
                 </div> <!-- End of first page -->
 
+ <div data-role="page" id="maplulu" data-theme="a">
 
+ <script type="text/javascript">
+                destinationLatitude = 42.293526, 
+                destinationLongitude = -71.303139;
+            </script>    
+
+            
+            <div data-role="content">   
+                <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
+                    <div id="map_canvas"></div>
+                <!--</div>-->   <div id="titleCont2">
+
+            <h2 class="title"> Science Center</h2>
+            <h3 class="title"> Leaky Beaker, 1st floor</h3>
+        </div>
+
+        <div id="pathDir">
+                <div id="mapResults">                  
+                    <div id="directions"></div>
+
+                </div> <!--results-->
+            </div>
+            </div> <!--content-->
               
+</div>
 
 </body>
 </html>
