--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -770,7 +770,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="map2.html" data-rel="page" data-transition="slide" ><div id="navigateB">
+            <a href="#sciMap" data-rel="page" data-transition="slide" ><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
