--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -888,7 +888,7 @@
     <img id = "heartIcon" src = "heartIconD.png">
 </div></a>
 
-<a href="#clapP" data-transition="slide"><div id="backArrowDiv">
+<a href="#resultsAnd" data-transition="slide"><div id="backArrowDiv">
     <img id = "arrowIcon" src = "arrowBack.png">
 </div></a>
 
@@ -927,7 +927,7 @@
     <img id = "heartIcon" src = "heartIconD.png">
 </div></a>
 
-<a href="#sciCenter" data-transition="slide"><div id="backArrowDiv">
+<a href="#resultsAnd" data-transition="slide"><div id="backArrowDiv">
     <img id = "arrowIcon" src = "arrowBack.png">
 </div></a>
 
