--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -1167,7 +1167,7 @@
                         travelMode: google.maps.DirectionsTravelMode["WALKING"]
                     };
 
-                    directionsService.route(request, function(response, status) {
+                    directionsService1.route(request, function(response, status) {
                         if (status == google.maps.DirectionsStatus.OK) {
                             directionsDisplay1.setPanel(document.getElementById("directions"));
                             directionsDisplay1.setDirections(response); 
