--- a/studySpot/index1.html
+++ b/studySpot/index1.html
@@ -708,7 +708,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="#maplulu" data-rel="page" data-transition="slide" ><div id="navigateB">
+            <a href="map.html" data-rel="page" data-transition="slide" ><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -769,7 +769,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="#mapSci" data-rel="page" data-transition="slide" ><div id="navigateB">
+            <a href="map2.html" data-rel="page" data-transition="slide" ><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -830,7 +830,7 @@
 
 
            </div> <!-- End of content -->
-            <a href="#mapClapp" data-transition="slide"><div id="navigateB">
+            <a href="map3.html" data-transition="slide"><div id="navigateB">
                     <img id="thumbs" src="thumbsUp-01.png">
                     <h2 class="title">Navigate</h2>
                 </div>
@@ -839,20 +839,6 @@
                 </div> <!-- End of first page -->
 
 
- <div data-role="page" id="mapSci" data-theme="a">
-   <div id="header">
-  <h1 class = "title">StudySpot</h1>
-  <a href="#favoritesPage2" data-transition="slide"><div id="heartDiv">
-    <img id = "heartIcon" src = "heartIconD.png">
-</div></a>
-
-<a href="#resultsAnd" data-transition="slide"><div id="backArrowDiv">
-    <img id = "arrowIcon" src = "arrowBack.png">
-</div></a>
-
-</div>
-
-
-
+ 
 </body>
 </html>
