--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -112,10 +112,10 @@ $("#addFav2").click(function(){
 </script>
     </head>
 
-    <body>
+    <body onload="window.location.reload()">
 
         <!--Anderson Forum Page-->
-        <div data-role="page" id="anderson" data-theme="a">
+        <div data-role="page" id="andersonMap" data-theme="a">
             <script type="text/javascript">
                 destinationLatitude = 42.294514, 
                 destinationLongitude = -71.308954;
