--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -112,7 +112,7 @@ $("#addFav2").click(function(){
 </script>
     </head>
 
-    <body onload="window.location.reload()">
+    <body> 
 
         <!--Anderson Forum Page-->
         <div data-role="page" id="andersonMap" data-theme="a">
